# qrpc-cpp

./: CMakeLists.txt  README.md
Client/: main.cpp
Core/: ChatClient.cpp  ChatClient.h  ChatServiceImpl.cpp  ChatServiceImpl.h
Proto/: chat.proto
Server/: main.cpp
